posiGen_FullsendBox/src/objects/Deal__c.object
<CustomObject>
    <fields>
        <fullName>ACH_Chosen__c</fullName>
        <formula>OR(ISPICKVAL( Financing_Bill_Payment_Options__c , &quot;Checking / Savings Acct (Auto-pay)&quot;),ISPICKVAL( Financing_Bill_Payment_Options__c , &quot;Credit Card Payments&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACH Chosen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACH_Payment_Date__c</fullName>
        <label>ACH Payment Date</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACS_Median_Income__c</fullName>
        <description>ACS 2013 5 year estimate median household income for census tract</description>
        <inlineHelpText>ACS 2013 5 year estimate median household income for census tract</inlineHelpText>
        <label>ACS Median Income</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>A_R_Outstanding__c</fullName>
        <label>A_R_Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Address_1__c</fullName>
        <formula>AccountId__r.BillingStreet</formula>
        <inlineHelpText>Account Address</inlineHelpText>
        <label>Account Address 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_City__c</fullName>
        <formula>AccountId__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_DOB__c</fullName>
        <formula>AccountId__r.PersonContact.Birthdate</formula>
        <label>Account DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Email__c</fullName>
        <formula>AccountId__r.PersonContact.Email</formula>
        <label>Account Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Employer_Contact_Name__c</fullName>
        <formula>AccountId__r.Employer_Contact_Name__c</formula>
        <label>Account Employer Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Employer_Phone__c</fullName>
        <formula>AccountId__r.Employer_Phone__c</formula>
        <label>Account Employer Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Employer__c</fullName>
        <formula>AccountId__r.PersonContact.Employer__c</formula>
        <label>Account Employer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Home_Phone__c</fullName>
        <formula>AccountId__r.PersonContact.HomePhone</formula>
        <label>Account Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>AccountId__r.Id</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Last_Name__c</fullName>
        <formula>AccountId__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Mobile__c</fullName>
        <formula>AccountId__r.PersonMobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Monthly_Income__c</fullName>
        <formula>AccountId__r.PersonContact.Monthly_Income__c</formula>
        <label>Account Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Name_Text__c</fullName>
        <formula>AccountId__r.FirstName + &apos; &apos; + AccountId__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>AccountId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Numeric_ID__c</fullName>
        <formula>VALUE(AccountId__r.Numeric_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Numeric ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <formula>AccountId__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_SSN__c</fullName>
        <formula>AccountId__r.PersonContact.SSN__c</formula>
        <label>Account SSN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Secondary_Phone__c</fullName>
        <formula>AccountId__r.Secondary_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Secondary Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <formula>AccountId__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Work_Phone__c</fullName>
        <formula>AccountId__r.PersonContact.OtherPhone</formula>
        <label>Account Work Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Zip__c</fullName>
        <formula>AccountId__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ach_Debit__c</fullName>
        <label>Ach_Debit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Signed_to_Submitted__c</fullName>
        <formula>Contracts_Initially_Submitted_to_DC_Date__c - Contracts_Signed_Date__c</formula>
        <label>Age Signed to Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_for_Install_Complete__c</fullName>
        <description>If the PVI Placed In Service Date is null, take Today - Contracts approved, else take the PVI Placed In Service Date - Contracts Approved Date.</description>
        <formula>IF( ISNULL( PVI_Placed_In_Service_Date__c ) , TODAY() - Contracts_Approved_Date__c, PVI_Placed_In_Service_Date__c - Contracts_Approved_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age for Install Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_in_Feasibility__c</fullName>
        <description>The amount (in days) that the Opp has been in Feasibility Analysis since the Contract Approved Date.</description>
        <formula>IF(   ISNULL(PVA_Assessment_Complete_Date__c) , TODAY() - Contracts_Approved_Date__c, PVA_Assessment_Complete_Date__c - Contracts_Approved_Date__c)</formula>
        <label>Feasibility Analysis Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aging_Created_to_PIS__c</fullName>
        <formula>DATEVALUE( CreatedDate ) - PVI_Placed_In_Service_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging Created to PIS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aging_Reject_to_Approve__c</fullName>
        <formula>Contracts_Approved_Date__c -  Contracts_Rejected_By_DC_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging Reject to Approve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aging_Signed_to_Approve__c</fullName>
        <formula>Contracts_Approved_Date__c -  Initial_Contracts_Signed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging Signed to Approve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aging_Submit_to_Approve__c</fullName>
        <formula>Contracts_Approved_Date__c -  Contracts_Finally_Submitted_to_DC_Date__c</formula>
        <label>Aging Submit to Approve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aging_Submit_to_Reject__c</fullName>
        <formula>Contracts_Rejected_By_DC_Date__c - Contracts_Initially_Submitted_to_DC_Date__c</formula>
        <label>Aging Submit to Reject</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Monthly_PV_Rate__c</fullName>
        <formula>CASE(Signed_PV_Lease_Size__c,&quot;4.5&quot;,54.99,&quot;6&quot;,69.99,&quot;8&quot;,99.99,99.99)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Monthly PV Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreement_No_Units__c</fullName>
        <description>Used in Packet Generation.  Number of panels for system.</description>
        <formula>CASE(Signed_PV_Lease_Size__c, &quot;4.5&quot;,18, &quot;6&quot;,24, &quot;8&quot;,32, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement No Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Payment_Total__c</fullName>
        <description>Used for Packet Generation.  Merges Lease total amount.</description>
        <formula>CASE(Signed_PV_Lease_Size__c, &quot;4.5&quot;,13197.60, &quot;6&quot;,16797.60, &quot;8&quot;,23997.60, 23997.60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Payment Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Household_Income__c</fullName>
        <inlineHelpText>Whoever fills out this field, please let your friendly neighborhood salesforce admin know. - Thank you</inlineHelpText>
        <label>Annual Household Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appointment_Kept__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is updated from the field that is on the Task.</description>
        <label>Appointment Kept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appointment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appointment Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_DocuSign_Packet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved DocuSign Packet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_Contracts_Approved__c</fullName>
        <formula>NOT(ISNULL( Contracts_Approved_Date__c )) || Install_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Are Contracts Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_You_Interested_In_Solar_Hot_Water__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are You Interested In Solar Hot Water?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_black_panels_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are black panels required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_you_in_a_Homeowner_s_Association__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are you in a Homeowner&apos;s Association</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_you_past_due_on_your_electric_bill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are you past due on your electric bill?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>Military Base Area</description>
        <inlineHelpText>Military Base Area</inlineHelpText>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>Mid Fort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Fort</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area_of_Home__c</fullName>
        <inlineHelpText>Are of home in square feet (not including garage)</inlineHelpText>
        <label>Area of Home (Square ft)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessor_Owner_Name_1__c</fullName>
        <formula>Property__r.AssessorOwnerName1__c</formula>
        <label>Assessor Owner Name 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor_Owner_Name_2__c</fullName>
        <formula>Property__r.AssessorOwnerName2__c</formula>
        <label>Assessor Owner Name 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attic_Access__c</fullName>
        <label>Attic Access</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attic_Type__c</fullName>
        <label>Attic Type</label>
        <picklist>
            <picklistValues>
                <fullName>Interior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Autopay_Method__c</fullName>
        <description>Used in the Autopay form</description>
        <label>Autopay Method</label>
        <picklist>
            <picklistValues>
                <fullName>Checking/Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debit/Credit</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BB_Funding_Amount__c</fullName>
        <label>BB Funding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BB_Funding_Date__c</fullName>
        <label>BB Funding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Routing_Number__c</fullName>
        <description>The Customer&apos;s Routing Number.</description>
        <label>Bank Routing Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Contact_E_mail__c</fullName>
        <formula>AccountId__r.PersonEmail</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill to Contact E-mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Contact_Name__c</fullName>
        <formula>AccountId__r.FirstName  &amp; &quot; &quot; &amp; AccountId__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill to Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Contact_Phone__c</fullName>
        <formula>AccountId__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill to Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Packet_Approved_DateX__c</fullName>
        <formula>Opportunity__r.Billing_Packet_Approved_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Packet Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Packet_Approved_Date__c</fullName>
        <description>Filled from the PV Install Project via UpdateOppFromPVInstall Apex trigger.</description>
        <label>Billing Packet Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bonus_Amount__c</fullName>
        <label>Bonus Amount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bonus_Paid_Date__c</fullName>
        <label>Bonus Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_Date__c</fullName>
        <label>Booking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Breaker_Box_Picture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Breaker Box Picture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BrightPath_Design_Completed_date__c</fullName>
        <label>Pre-Assessment Design Completed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BrightPath_Design_Requested_Date__c</fullName>
        <label>Pre-Assessment Design Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BrightPath_Result__c</fullName>
        <label>Pre-Assessment Result</label>
        <picklist>
            <picklistValues>
                <fullName>Feasible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Feasible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACP too low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not in Sunrun Unique Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease price doesn&apos;t match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSRF below 80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feasible – 4.68 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feasible – 6.24 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NF – Does not meet minimum yield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NF – Not a compatible roof type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NF – Lack of feasible roof space</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Building_Series__c</fullName>
        <description>Building series types</description>
        <inlineHelpText>Building series types</inlineHelpText>
        <label>Building Series</label>
        <picklist>
            <picklistValues>
                <fullName>1000 Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>350 Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500 Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>652 Homes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Building_Storys__c</fullName>
        <label>Building Stories</label>
        <picklist>
            <picklistValues>
                <fullName>Single Story</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two Story</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CT_AMI_Bands__c</fullName>
        <label>CT AMI Bands</label>
        <picklist>
            <picklistValues>
                <fullName>60% or Less of AMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60% of AMI (HOME)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80% of AMI (HOME)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100% of AMI (AHP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than 100% of AMI</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Can_owner_access_utility_bill_online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can owner access utility bill online?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Tract__c</fullName>
        <description>2013 Shape Files</description>
        <inlineHelpText>2013 Shape Files</inlineHelpText>
        <label>Census Tract</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Ordered_Date__c</fullName>
        <label>Certificate Ordered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certificate_Received_Date__c</fullName>
        <label>Certificate Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_has_a_unique_ownership_situation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client has a unique ownership situation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <label>CloseDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Abandoned_Reason_Detail__c</fullName>
        <inlineHelpText>Enter any additional details on Lost/Abandoned reason(s).</inlineHelpText>
        <label>Closed Lost/Abandoned Reason Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Abandoned_Reason__c</fullName>
        <label>Closed Lost/Abandoned Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Not Feasible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packet Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changed Mind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Company not Eligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not want to lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not qualified home type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of service area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Repair Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Does Not Qualify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aesthetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Lost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed/Lost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_Owner_Email__c</fullName>
        <label>Co-Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Co_Owner_Employer_Contact_Name__c</fullName>
        <label>Co-Owner Employer Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Owner_Employer_Phone__c</fullName>
        <label>Co-Owner Employer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Co_Owner_Employer__c</fullName>
        <label>Co-Owner Employer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Owner_Mobile_Phone__c</fullName>
        <label>Co-Owner Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Co_Owner_Monthly_Income__c</fullName>
        <label>Co Owner Monthly Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Co_Owner_SSN__c</fullName>
        <label>Co Owner SSN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Owner_Work_Phone__c</fullName>
        <label>Co-Owner Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Commencement_Date__c</fullName>
        <description>Same as First Payment Due Date</description>
        <formula>First_Payment_Due_Dat__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commission_Amount__c</fullName>
        <label>Commission Amount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Approved_Payout_Date__c</fullName>
        <label>Approved Payout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commission_Approved_Payout__c</fullName>
        <label>Approved Payout</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Charged_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charged Back?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_Description__c</fullName>
        <label>Commission Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commission_Install_Payout_Date__c</fullName>
        <label>Install Payout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commission_Install_Payout__c</fullName>
        <label>Install Payout</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Month__c</fullName>
        <label>Commission Month</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Paid_Date__c</fullName>
        <label>Commission Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commission_Tier__c</fullName>
        <label>Commission Tier</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Concierge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Concierge</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ConciergeDeal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirmed_home_is_not_a_double__c</fullName>
        <description>From lead</description>
        <label>Confirmed home is not a double</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Reference_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Reference 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact Reference 1)</relationshipLabel>
        <relationshipName>Opportunities14</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Reference_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Reference 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact Reference 2)</relationshipLabel>
        <relationshipName>Opportunities15</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Applicant_Name__c</fullName>
        <formula>Property__r.AssessorOwnerName1__c</formula>
        <label>Contract Applicant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Approved_By__c</fullName>
        <label>Contract Approved By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Joint_Applicant_Name__c</fullName>
        <formula>Property__r.AssessorOwnerName2__c</formula>
        <label>Contract Joint Applicant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contracts_Approved_Date__c</fullName>
        <inlineHelpText>Enter Date Contracts were Approved</inlineHelpText>
        <label>Contracts Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracts_Finally_Submitted_to_DC_Date__c</fullName>
        <label>Contracts Finally Submitted to DC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracts_Initially_Submitted_to_DC_Date__c</fullName>
        <label>Contracts Initially Submitted to DC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracts_Last_Reviewed_By_DC_Date__c</fullName>
        <formula>IF(ISNULL(Contracts_Rejected_By_DC_Date__c), Contracts_Approved_Date__c,IF(ISNULL(Contracts_Approved_Date__c), Contracts_Rejected_By_DC_Date__c,IF(Contracts_Approved_Date__c &gt;= Contracts_Rejected_By_DC_Date__c, Contracts_Approved_Date__c , Contracts_Rejected_By_DC_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contracts Last Reviewed By DC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracts_Rejected_By_DC_Date__c</fullName>
        <label>Contracts Rejected By DC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracts_Signed_Date__c</fullName>
        <label>Contracts Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_of_Pipeline_Stage__c</fullName>
        <label>Copy of Pipeline Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>AccountId__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + Property__r.County__c,  Property__r.County__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the County (from the Property record)</inlineHelpText>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Project_SP_Name__c</fullName>
        <formula>&apos;SF_CreateTemplateProjectForOpportunity&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Project SP Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Property_SP_Name__c</fullName>
        <formula>&apos;SF_CreatePropertyFromNewOpp&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Property SP Name</label>
        <type>Text</type>
    </fields>
</CustomObject>